<resources>
    <string name="app_name">BookListApp</string>

    <string name="preferences_key">BookListApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat Password</string>
    <string name="login">Login</string>
    <string name="register_text">Don\'t have an a account yet? Register here!</string>
    <string name="sign_up">Sign Up</string>
    <string name="no_books">There are no books in the list!</string>
    <string name="logout">Logout</string>
    <string name="author">Author</string>
    <string name="book_name">Book name</string>
    <string name="save_book">Save Book</string>
</resources>